test_case/rust-lang_rust/39362_304118257.rs
rust
//~^ ERROR non-exhaustive patterns: `Bar { bar: C, .. }`, `Bar { bar: D, .. }`, `Bar { bar: E, .. }` and 1 more not covered
